--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,10 @@
 {
+    "name": "mugiwaras/looper",
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    },
     "require": {
         "vlucas/phpdotenv": "^5.5"
     }
