feat : update composer json

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "mugiwaras/looper",
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "App\\Controllers\\": "src/controllers"
         }
     },
     "require": {
