--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     },
     "require": {
         "vlucas/phpdotenv": "^5.5",
-        "mugiwaras/framework": "dev-release"
+        "mugiwaras/framework": "dev-main"
     },
     "repositories": [
         {
