--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     },
     "require": {
         "vlucas/phpdotenv": "^5.5",
-        "mugiwaras/framework": "dev-main"
+        "mugiwaras/framework": "dev-develop"
     },
     "require-dev": {
         "symfony/var-dumper": "^6.3"
