--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
-PDO_DSN=mysql:host=localhost;dbname=DB_NAME;charset=utf8
-PDO_USERNAME=USERNAME
-PDO_PASSWORD=PASSWORD
+APP_HOST=http://127.0.0.1
+APP_NAME=Exercise-Looper
+
+DB_DATABASE=my_db
+DB_HOST=localhost
+DB_PASSWORD=my_password
+DB_ROOT_PASSWORD=my_root_password
+DB_USERNAME=luffy
+
+VIEW_PATH=./src/views
