--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     },
     "require": {
         "vlucas/phpdotenv": "^5.5",
-        "mugiwaras/framework": "dev-develop",
+        "mugiwaras/framework": "dev-main",
         "composer/composer": "^2.6"
     },
     "require-dev": {
